Fix wrong padding on circular buttons

--- a/bigbluebutton-html5/imports/ui/components/button/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/button/styles.scss
@@ -260,10 +260,10 @@ $btn-jumbo-padding: $jumbo-padding-y $jumbo-padding-x;
 
 
 .circle {
-  $btn-sm-padding-x: nth($btn-sm-padding, 1) / 2.75;
-  $btn-md-padding-x: nth($btn-md-padding, 1) / 2.75;
-  $btn-lg-padding-x: nth($btn-lg-padding, 1) / 2.75;
-  $btn-jumbo-padding-x: nth($btn-jumbo-padding, 1) / 2.75;
+  $btn-sm-padding-x: nth($btn-sm-padding, 2) / 2.75;
+  $btn-md-padding-x: nth($btn-md-padding, 2) / 2.75;
+  $btn-lg-padding-x: nth($btn-lg-padding, 2) / 2.75;
+  $btn-jumbo-padding-x: nth($btn-jumbo-padding, 2) / 2.75;
 
   border-radius: 50%;
 
